--- a/src/app/app.css
+++ b/src/app/app.css
@@ -42,3 +42,33 @@
     max-width: 1000px !important;
   }
 }
+
+button, a{
+  cursor: pointer;
+}
+
+ .loader {
+    border: 3px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 3px solid #3498db;
+    width: 20px;
+    height: 20px;
+    animation: spin 1s linear infinite;
+    display: inline-block;
+    vertical-align: middle;
+  }
+
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+
+  /* Refresh animation */
+  .refresh-animate {
+    animation: refreshSpin 0.5s linear infinite;
+  }
+
+  @keyframes refreshSpin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
